# dlaai_final_project

final_project/: README.md  colab_setup_and_run.ipynb  pyproject.toml  requirements.txt
final_project/src/final_project/: __init__.py
final_project/src/final_project/checkpoints/: transformer.pth  vae.pth  vqvae.pth
final_project/src/final_project/checkpoints/vae/: vae-epoch=18-val_loss=14163.7070.ckpt
final_project/src/final_project/checkpoints/vqvae/: vqvae-epoch=29-val_loss=0.0132.ckpt
final_project/src/final_project/clustering/: README.md  __init__.py  geodesic_clustering.py  geodesic_kmeans.py  scalable_geodesic_clustering.py
final_project/src/final_project/configs/: clustering_config.yaml  transformer_config.yaml  vae_config.yaml  vqvae_config.yaml
final_project/src/final_project/data/: __init__.py  discrete_codes.py  mnist.py
final_project/src/final_project/evaluation/: __init__.py  clustering_eval.py  eval_transformer.py  eval_vqvae.py  evaluation.py  metrics.py  reconstruction_eval.py  visualization.py
final_project/src/final_project/logs/transformer_vae-geodesic/version_0/: events.out.tfevents.1748373449.8545198ae3d5.4766.0  events.out.tfevents.1748373544.8545198ae3d5.4766.1
final_project/src/final_project/logs/transformer_vae-geodesic/version_1/: events.out.tfevents.1748422481.23c3a25059c2.7987.0  events.out.tfevents.1748422572.23c3a25059c2.7987.1
final_project/src/final_project/logs/transformer_vqvae/version_0/: events.out.tfevents.1748373050.8545198ae3d5.2965.0  events.out.tfevents.1748373147.8545198ae3d5.2965.1  hparams.yaml
final_project/src/final_project/logs/transformer_vqvae/version_1/: events.out.tfevents.1748422701.23c3a25059c2.8935.0  events.out.tfevents.1748422793.23c3a25059c2.8935.1  hparams.yaml
final_project/src/final_project/models/: __init__.py  transformer.py  transformer_module.py  vae.py  vae_module.py  vqvae.py  vqvae_module.py
final_project/src/final_project/outputs/: discrete_codes.npy  vae_latents.npy
final_project/src/final_project/outputs/geodesic/: .gitignore  codebook_latents.npy  kmedoids_labels.npy
final_project/src/final_project/outputs/vae/: vae_labels.npy  vae_latents.npy
final_project/src/final_project/train/: __init__.py  eval_geodesic.py  eval_vae.py  eval_vqvae.py  train_transformer.py  train_transformer_vqvae.py  train_vae.py  train_vqvae.py
final_project/src/final_project/utils/: __init__.py  helpers.py  latent_extraction.py  visualize_latents.py  visualize_latents_vae.py  visualize_latents_vqvae.py
(+6 files in other folders)
