[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aiman", email = "aimann@stud.ntnu.no" }
]
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[project.scripts]
final-project = "final_project:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
