[project]
name = "final-project"
version = "0.1.0"
description = "Final project for the course Deep Learning and Applied AI at Sapienza"
readme = "README.md"
authors = [
    { name = "Aiman", email = "aimann@stud.ntnu.no" }
]
requires-python = ">=3.11"
dependencies = [
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "numpy==1.24.4",
    "scikit-learn>=1.6.1",
    "scikit-learn-extra>=0.3.0",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[project.scripts]
final-project = "final_project:main"
geodesic-kmeans = "final_project.clustering.geodesic_kmeans:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
