[project]
name = "final-project"
version = "0.1.0"
description = "Final project for the course Deep Learning and Applied AI at Sapienza"
readme = "README.md"
authors = [
    { name = "Aiman", email = "aimann@stud.ntnu.no" }
]
requires-python = ">=3.11"
dependencies = [
    "annoy>=1.17.3",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "numpy==1.24.4",
    "scikit-learn>=1.6.1",
    "scikit-learn-extra>=0.3.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.19.0",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67.1",
    "umap-learn>=0.5.7",
]

[project.scripts]
final-project = "final_project:main"
geodesic-kmeans = "final_project.clustering.geodesic_kmeans:main"
scalable-geodesic = "final_project.clustering.scalable_geodesic_clustering:main"
eval-geodesic = "final_project.evaluation.eval_geodesic:main"
eval-transformer = "final_project.evaluation.eval_transformer:main"
train-vqvae = "final_project.train.train_vqvae:main"
train-vae = "final_project.train.train_vae:main"
train-transformer-vqvae = "final_project.train.train_transformer_vqvae:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
